# efly

./: .gitignore  README.en.md  README.md  build.cmd  components.d.ts  package-lock.json  package.json  updateLists.json  vite.config.ts
src/: App.vue  main.ts  settings.ts
src-lib/: CMakeLists.txt  DEVELOPMENT.md  vcpkg-configuration.json
src-lib/include/efly/: efly_api.h  efly_types.h  file_io.h  packet_buffer.h  peer_discovery.h  protocol_handler.h  transfer_manager.h  udp_server.h
src-lib/src/: dll_main.cpp  file_io.cpp  packet_buffer.cpp  peer_discovery.cpp  protocol_handler.cpp  transfer_manager.cpp  udp_server.cpp
src-lib/test/: CMakeLists.txt  check.cpp
src-lib/tools/: CMakeLists.txt  cli.cpp
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  update.rs  update_conf.rs
src/components/: PeerPanel.vue  SettingsDialog.vue  TransferPanel.vue
src/styles/: theme.css
